--- a/config/500-controller.yaml
+++ b/config/500-controller.yaml
@@ -23,11 +23,13 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: cloud-run-events-controller
+      app: cloud-run-events
+      role: controller
   template:
     metadata:
       labels:
-        app: cloud-run-events-controller
+        app: cloud-run-events
+        role: controller
     spec:
       serviceAccountName: controller
       containers:
