Add release labels where missing

--- a/config/201-addressable-resolvers-clusterrole.yaml
+++ b/config/201-addressable-resolvers-clusterrole.yaml
@@ -18,6 +18,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: addressable-resolver
+  labels:
+    events.cloud.run/release: devel
 aggregationRule:
   clusterRoleSelectors:
   - matchLabels:
@@ -31,7 +33,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: service-addressable-resolver
   labels:
-      duck.knative.dev/addressable: "true"
+    events.cloud.run/release: devel
+    duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
 - apiGroups:
@@ -50,6 +53,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kservice-addressable-resolver
   labels:
+    events.cloud.run/release: devel
     duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
@@ -70,6 +74,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pubsub-topic-addressable-resolver
   labels:
+    events.cloud.run/release: devel
     duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
@@ -89,6 +94,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: events-channel-addressable-resolver
   labels:
+    events.cloud.run/release: devel
     duck.knative.dev/addressable: "true"
 # Do not use this role directly. These rules will be added to the "addressable-resolver" role.
 rules:
