--- a/config/201-channelable-manipulator-clusterrole.yaml
+++ b/config/201-channelable-manipulator-clusterrole.yaml
@@ -19,6 +19,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: events-channel-addressable-resolver
   labels:
+    events.cloud.run/release: devel
     duck.knative.dev/channelable: "true"
 # Do not use this role directly. These rules will be added to the "channelable-manipulator" role.
 rules:
