add/remove work on happy path

--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -112,6 +112,7 @@ rules:
   resources:
     - secrets # TODO: Does it really need global secrets access?
     - configmaps
+    - pods # For reading termination messages
   verbs: &readOnly
     - get
     - list
