Use CloudEventOverrides from Storage and pass down to PullSubscription.

--- a/config/300-storage.yaml
+++ b/config/300-storage.yaml
@@ -154,7 +154,9 @@ spec:
               type: array
             sinkUri:
               type: string
-            topic:
+            projectId:
+              type: string
+            topicId:
               type: string
             notificationId:
               type: string
