--- a/config/300-storage.yaml
+++ b/config/300-storage.yaml
@@ -129,6 +129,8 @@ spec:
           - sink
         status:
           properties:
+            observedGeneration:
+              type: int
             conditions:
               items:
                 properties:
