--- a/config/300-channel.yaml
+++ b/config/300-channel.yaml
@@ -101,8 +101,12 @@ spec:
                         minLength: 1
         status:
           properties:
+            observedGeneration:
+              type: int
             conditions:
+              type: array
               items:
+                type: object
                 properties:
                   lastTransitionTime:
                     # we use a string in the stored object but a wrapper object
@@ -121,6 +125,27 @@ spec:
                 required:
                   - type
                   - status
-                type: object
+            subscribableStatus:
               type: array
+              items:
+                type: object
+                properties:
+                  uid:
+                    type: string
+                  observedGeneration:
+                    type: int
+                  ready:
+                    type: string
+                  message:
+                    type: string
+            address:
+              type: object
+              properties:
+                url:
+                  type: string
+            projectId:
+              type: string
+            subscriptionId:
+              type: string
+
           type: object
