--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -106,6 +106,9 @@ spec:
           type: object
         status:
           properties:
+            observedGeneration:
+              type: integer
+              format: int64
             conditions:
               items:
                 properties:
