--- a/config/300-decorator.yaml
+++ b/config/300-decorator.yaml
@@ -61,6 +61,9 @@ spec:
           properties:
             sinkUri:
               type: string
+            observedGeneration:
+              type: integer
+              format: int64
             conditions:
               items:
                 properties:
