--- a/config/500-webhook.yaml
+++ b/config/500-webhook.yaml
@@ -59,6 +59,8 @@ spec:
                   fieldPath: metadata.namespace
             - name: CONFIG_LOGGING_NAME
               value: config-logging
+            - name: METRICS_DOMAIN
+              value: knative.dev/eventing
       volumes:
         - name: config-logging
           configMap:
