--- a/config/300-pullsubscription.yaml
+++ b/config/300-pullsubscription.yaml
@@ -48,6 +48,7 @@ spec:
       properties:
         registry:
           type: object
+          title: "PubSub"
           description: "Internal information, users should not set this property"
           properties:
             eventTypes:
