--- a/config/config-observability.yaml
+++ b/config/config-observability.yaml
@@ -57,4 +57,4 @@ data:
     # stackdriver-custom-metrics-subdomain is the subdomain to use when sending custom metrics to StackDriver.
     # If not specified, the default is set to "knative.dev".
     # If metrics.backend-destination is not Stackdriver, this is ignored.
-    #metrics.stackdriver-custom-metrics-subdomain: "<your subdomain>"
+    metrics.stackdriver-custom-metrics-subdomain: "<your subdomain>"
