--- a/config/300-storage.yaml
+++ b/config/300-storage.yaml
@@ -49,6 +49,7 @@ spec:
         registry:
           type: object
           description: "Internal information, users should not set this property"
+          title: "Storage"
           properties:
             eventTypes:
               type: object
