--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -132,3 +132,41 @@ rules:
   resources:
     - eventtypes
   verbs: *everything
+
+# The role is needed for the aggregated role source-resolver in knative-eventing to provide readonly access to "Sources"
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: knative-gcp-pullsubscription-resolver
+  labels:
+    eventing.knative.dev/release: devel
+    duck.knative.dev/sourceObserver: "true"
+rules:
+  - apiGroups:
+      - "pubsub.cloud.run"
+    resources:
+      - "pullsubscriptions"
+    verbs:
+      - get
+      - list
+      - watch
+
+# The role is needed for the aggregated role source-resolver in knative-eventing to provide readonly access to "Sources"
+---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: knative-gcp-storage-resolver
+  labels:
+    eventing.knative.dev/release: devel
+    duck.knative.dev/sourceObserver: "true"
+rules:
+  - apiGroups:
+      - "events.cloud.run"
+    resources:
+      - "storages"
+    verbs:
+      - get
+      - list
+      - watch
