--- a/test/performance/channel-pubsub/continuous/100-channel-perf-setup.yaml
+++ b/test/performance/channel-pubsub/continuous/100-channel-perf-setup.yaml
@@ -48,46 +48,35 @@ data:
 
 ---
 
-apiVersion: eventing.knative.dev/v1alpha1
-kind: Broker
+apiVersion: v1
+kind: Service
 metadata:
-  name: pubsub
+  name: channel-perf-consumer
   namespace: default
 spec:
-  channelTemplateSpec:
-    apiVersion: messaging.cloud.run/v1alpha1
-    kind: Channel
-
----
-
-apiVersion: eventing.knative.dev/v1alpha1
-kind: Trigger
-metadata:
-  name: broker-pubsub
-  namespace: default
-spec:
-  broker: pubsub
-  subscriber:
-    ref:
-      apiVersion: v1
-      kind: Service
-      name: broker-pubsub-receiver
+  selector:
+    role: channel-perf-consumer
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: cloudevents
+    name: http
 
 ---
 
 apiVersion: v1
-kind: ServiceAccount
+kind: Service
 metadata:
-  name: eventing-broker-ingress
+  name: channel-perf-aggregator
   namespace: default
-
----
-
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: eventing-broker-filter
-  namespace: default
+spec:
+  selector:
+    role: channel-perf-aggregator
+  ports:
+    - name: grpc
+      port: 10000
+      targetPort: grpc
+      protocol: TCP
 
 ---
 
@@ -125,94 +114,24 @@ roleRef:
 
 ---
 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+apiVersion: messaging.cloud.run/v1alpha1
+kind: Channel
 metadata:
-  name: eventing-broker-ingress
+  name: pubsub-test-channel
   namespace: default
-subjects:
-  - kind: ServiceAccount
-    name: eventing-broker-ingress
-    namespace: default
-roleRef:
-  kind: ClusterRole
-  name: eventing-broker-ingress
-  apiGroup: rbac.authorization.k8s.io
 
 ---
 
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+
+apiVersion: messaging.knative.dev/v1alpha1
+kind: Subscription
 metadata:
-  name: eventing-broker-filter
+  name: pubsub-test-channel-sub
   namespace: default
-subjects:
-  - kind: ServiceAccount
-    name: eventing-broker-filter
-    namespace: default
-roleRef:
-  kind: ClusterRole
-  name: eventing-broker-filter
-  apiGroup: rbac.authorization.k8s.io
-
----
-
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: eventing-config-reader-default-eventing-broker-ingress
-  namespace: knative-eventing
-subjects:
-  - kind: ServiceAccount
-    name: eventing-broker-ingress
-    namespace: default
-roleRef:
-  kind: ClusterRole
-  name: eventing-config-reader
-  apiGroup: rbac.authorization.k8s.io
-
----
-
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: eventing-config-reader-default-eventing-broker-filter
-  namespace: knative-eventing
-subjects:
-  - kind: ServiceAccount
-    name: eventing-broker-filter
-    namespace: default
-roleRef:
-  kind: ClusterRole
-  name: eventing-config-reader
-  apiGroup: rbac.authorization.k8s.io
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: broker-pubsub-receiver
 spec:
-  selector:
-    role: broker-pubsub-receiver
-  ports:
-    - name: http
-      port: 80
-      targetPort: cloudevents
-      protocol: TCP
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: broker-pubsub-aggregator
-spec:
-  selector:
-    role: broker-pubsub-aggregator
-  ports:
-    - name: grpc
-      port: 10000
-      targetPort: grpc
-      protocol: TCP
+  channel:
+    apiVersion: messaging.cloud.run/v1alpha1
+    kind: Channel
+    name: pubsub-test-channel
+  subscriber:
+    uri: "http://channel-perf-consumer.default.svc.cluster.local"
