--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -157,10 +157,10 @@ rules:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: knative-gcp-storage-resolver
+  name: knative-gcp-storage-observer
   labels:
     eventing.knative.dev/release: devel
-    duck.knative.dev/sourceObserver: "true"
+    duck.knative.dev/source: "true"
 rules:
   - apiGroups:
       - "events.cloud.run"
