--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -138,10 +138,10 @@ rules:
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: knative-gcp-pullsubscription-resolver
+  name: knative-gcp-pullsubscription-observer
   labels:
     eventing.knative.dev/release: devel
-    duck.knative.dev/sourceObserver: "true"
+    duck.knative.dev/source: "true"
 rules:
   - apiGroups:
       - "pubsub.cloud.run"
