--- a/config/201-clusterrole.yaml
+++ b/config/201-clusterrole.yaml
@@ -133,7 +133,7 @@ rules:
     - eventtypes
   verbs: *everything
 
-# The role is needed for the aggregated role source-resolver in knative-eventing to provide readonly access to "Sources"
+# The role is needed for the aggregated role source-observer in knative-eventing to provide readonly access to "Sources"
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
@@ -152,7 +152,7 @@ rules:
       - list
       - watch
 
-# The role is needed for the aggregated role source-resolver in knative-eventing to provide readonly access to "Sources"
+# The role is needed for the aggregated role source-observer in knative-eventing to provide readonly access to "Sources"
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
