updating cloud events types, avoiding extra mapping not needed

--- a/config/300-pubsub.yaml
+++ b/config/300-pubsub.yaml
@@ -22,7 +22,7 @@ metadata:
   annotations:
     registry.cloud.google.com/eventTypes: |
       [
-        { "type": "google.pubsub.topic.publish", "description": "This event is sent when a message is published to a Cloud Pub/Sub topic."}
+        { "type": "com.google.cloud.pubsub.topic.publish", "description": "This event is sent when a message is published to a Cloud Pub/Sub topic."}
       ]
   name: pubsubs.events.cloud.google.com
 spec:
