--- a/test/performance/broker-pubsub/continuous/100-broker-pubsub-setup.yaml
+++ b/test/performance/broker-pubsub/continuous/100-broker-pubsub-setup.yaml
@@ -55,7 +55,7 @@ metadata:
   namespace: default
 spec:
   channelTemplateSpec:
-    apiVersion: messaging.cloud.run/v1alpha1
+    apiVersion: messaging.cloud.google.com/v1alpha1
     kind: Channel
 
 ---
