--- a/test/performance/channel-pubsub/continuous/100-channel-perf-setup.yaml
+++ b/test/performance/channel-pubsub/continuous/100-channel-perf-setup.yaml
@@ -114,7 +114,7 @@ roleRef:
 
 ---
 
-apiVersion: messaging.cloud.run/v1alpha1
+apiVersion: messaging.cloud.google.com/v1alpha1
 kind: Channel
 metadata:
   name: pubsub-test-channel
@@ -130,7 +130,7 @@ metadata:
   namespace: default
 spec:
   channel:
-    apiVersion: messaging.cloud.run/v1alpha1
+    apiVersion: messaging.cloud.google.com/v1alpha1
     kind: Channel
     name: pubsub-test-channel
   subscriber:
