--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -62,7 +62,7 @@ required = [
 
 [[override]]
   name = "github.com/cloudevents/sdk-go"
-  version = "0.9.2"
+  branch = "master"
 
 [prune]
   go-tests = true
