--- a/config/300-pubsub.yaml
+++ b/config/300-pubsub.yaml
@@ -65,6 +65,44 @@ spec:
             sink:
               type: object
               description: "Reference to an object that will resolve to a domain name to use as the sink."
+              anyOf:
+                - uri:
+                    type: object
+                    properties:
+                      uri:
+                        type: string
+                        minLength: 1
+                - ref:
+                    type: object
+                    properties:
+                      ref:
+                        type: object
+                        required:
+                          - apiVersion
+                          - kind
+                          - name
+                        properties:
+                          apiVersion:
+                            type: string
+                            minLength: 1
+                          kind:
+                            type: string
+                            minLength: 1
+                          name:
+                            type: string
+                            minLength: 1
+                - deprecatedRef:
+                    type: object
+                    properties:
+                      apiVersion:
+                        type: string
+                        minLength: 1
+                      kind:
+                        type: string
+                        minLength: 1
+                      name:
+                        type: string
+                        minLength: 1
             ceOverrides:
               type: object
               description: "Defines overrides to control modifications of the event sent to the sink."
