--- a/config/300-scheduler.yaml
+++ b/config/300-scheduler.yaml
@@ -76,43 +76,40 @@ spec:
               type: object
               description: "Sink which receives the notifications."
               anyOf:
-                - uri:
-                    type: object
-                    properties:
-                      uri:
-                        type: string
-                        minLength: 1
-                - ref:
-                    type: object
-                    properties:
-                      ref:
-                        type: object
-                        required:
-                          - apiVersion
-                          - kind
-                          - name
-                        properties:
-                          apiVersion:
-                            type: string
-                            minLength: 1
-                          kind:
-                            type: string
-                            minLength: 1
-                          name:
-                            type: string
-                            minLength: 1
-                - deprecatedRef:
-                    type: object
-                    properties:
-                      apiVersion:
-                        type: string
-                        minLength: 1
-                      kind:
-                        type: string
-                        minLength: 1
-                      name:
-                        type: string
-                        minLength: 1
+                - type: object
+                  properties:
+                    uri:
+                      type: string
+                      minLength: 1
+                - type: object
+                  properties:
+                    ref:
+                      type: object
+                      required:
+                        - apiVersion
+                        - kind
+                        - name
+                      properties:
+                        apiVersion:
+                          type: string
+                          minLength: 1
+                        kind:
+                          type: string
+                          minLength: 1
+                        name:
+                          type: string
+                          minLength: 1
+                - type: object
+                  properties:
+                    apiVersion:
+                      type: string
+                      minLength: 1
+                    kind:
+                      type: string
+                      minLength: 1
+                    name:
+                      type: string
+                      minLength: 1
           required:
           - location
           - schedule
