--- a/config/300-channel.yaml
+++ b/config/300-channel.yaml
@@ -14,11 +14,12 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
- name: channels.messaging.cloud.google.com
- labels:
-   events.cloud.google.com/release: devel
-   events.cloud.google.com/crd-install: "true"
-   messaging.knative.dev/subscribable: "true"
+  name: channels.messaging.cloud.google.com
+  labels:
+    events.cloud.google.com/release: devel
+    events.cloud.google.com/crd-install: "true"
+    messaging.knative.dev/subscribable: "true"
+    duck.knative.dev/addressable: "true"
 spec:
   group: messaging.cloud.google.com
   version: v1alpha1
