--- a/config/300-topic.yaml
+++ b/config/300-topic.yaml
@@ -14,10 +14,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
- name: topics.pubsub.cloud.google.com
- labels:
-   events.cloud.google.com/release: devel
-   events.cloud.google.com/crd-install: "true"
+  name: topics.pubsub.cloud.google.com
+  labels:
+    events.cloud.google.com/release: devel
+    events.cloud.google.com/crd-install: "true"
+    duck.knative.dev/addressable: "true"
 spec:
   group: pubsub.cloud.google.com
   version: v1alpha1
