--- a/test/e2e/config/pubsub_broker/200-trigger.yaml
+++ b/test/e2e/config/pubsub_broker/200-trigger.yaml
@@ -25,7 +25,7 @@ spec:
   template:
     spec:
       containers:
-        - image: {{ .recieverImage }}
+        - image: {{ .receiverImage }}
 
 ---
 
