--- a/test/e2e/config/pubsub_sender/sender.yaml
+++ b/test/e2e/config/pubsub_sender/sender.yaml
@@ -33,12 +33,8 @@ spec:
       containers:
         - name: sender
           env:
-            - name: POD_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: BROKER_NAME
-              value: {{ .brokerName }}
+            - name: BROKER_URL
+              value: {{ .brokerURL }}
           image: {{ .senderImage }}
           imagePullPolicy: Always
       restartPolicy: Never
