--- a/test/performance/benchmarks/channel-pubsub/dev.config
+++ b/test/performance/benchmarks/channel-pubsub/dev.config
@@ -4,9 +4,9 @@
 # mako update_benchmark test/performance/channel-pubsub/continuous/dev.config
 
 project_name: "Knative"
-benchmark_name: "Development - Channel Latency & Throughput"
+benchmark_name: "Development - PubSub Channel Latency & Throughput"
 description: "Measure latency and throughput of channels."
-benchmark_key: '5683818216292352'
+benchmark_key: '6246352530964480'
 
 # Human owners for manual benchmark adjustments.
 owner_list: "grantrodgers@google.com"
@@ -16,7 +16,7 @@ owner_list: "gracegao@google.com"
 owner_list: "nachocano@google.com"
 
 # Anyone can add their IAM robot here to publish to this benchmark.
-owner_list: "mako-job@knative-gcp-performance.iam.gserviceaccount.com"
+owner_list: "mako-job@knative-performance.iam.gserviceaccount.com"
 # This is grantrodgers' robot:
 owner_list: "mako-upload@grantrodgers-crd.iam.gserviceaccount.com"
 owner_list: "mako-upload@xiyue-knative-project.iam.gserviceaccount.com"
