--- a/test/performance/benchmarks/channel-pubsub/continuous/200-channel-perf.yaml
+++ b/test/performance/benchmarks/channel-pubsub/continuous/200-channel-perf.yaml
@@ -43,6 +43,7 @@ spec:
               image: knative.dev/eventing/test/test_images/performance
               args:
                 - "--roles=sender,receiver"
+                # FIXME: not sure if this address is correct
                 - "--sink=http://cre-pubsub-test-channel-chan-publish.default.svc.cluster.local"
                 - "--aggregator=channel-perf-aggregator:10000"
                 - "--pace=100:10,400:20,800:30,1000:60,2000:60,3000:60"
