--- a/test/performance/benchmarks/channel-pubsub/continuous/200-channel-perf.yaml
+++ b/test/performance/benchmarks/channel-pubsub/continuous/200-channel-perf.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 The Knative Authors
+# Copyright 2019 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -43,10 +43,9 @@ spec:
               image: knative.dev/eventing/test/test_images/performance
               args:
                 - "--roles=sender,receiver"
-                # FIXME: not sure if this address is correct
                 - "--sink=http://cre-pubsub-test-channel-chan-publish.default.svc.cluster.local"
                 - "--aggregator=channel-perf-aggregator:10000"
-                - "--pace=100:10,400:20,800:30,1000:60,2000:60,3000:60"
+                - "--pace=100:10,200:20,400:30,500:60,600:60,700:60"
               env:
                 - name: POD_NAME
                   valueFrom:
