--- a/test/performance/benchmarks/broker-pubsub/cluster.yaml
+++ b/test/performance/benchmarks/broker-pubsub/cluster.yaml
@@ -16,6 +16,6 @@
 
 GKECluster:
   location: "us-west1"
-  nodeCount: 3
+  nodeCount: 2
   nodeType: "n1-standard-4"
-  addons: "HorizontalPodAutoscaling,HttpLoadBalancing"
+  addons: "HorizontalPodAutoscaling,HttpLoadBalancing,Istio"
