--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,7 +26,7 @@ required = [
 # This is a preemptive override.
 [[override]]
   name = "knative.dev/eventing"
-  branch = "master"
+  branch = "release-0.10"
 
 # This is a preemptive override.
 [[override]]
