updating to new destination

--- a/test/e2e/config/storage_test/storage.yaml
+++ b/test/e2e/config/storage_test/storage.yaml
@@ -20,6 +20,7 @@ metadata:
 spec:
   bucket: {{ .bucket }}
   sink:
-    apiVersion: v1
-    kind: Service
-    name: {{ .targetName }}
+    ref:
+      apiVersion: v1
+      kind: Service
+      name: {{ .targetName }}
