--- a/test/e2e/config/pubsub_test/pubsub-test.yaml
+++ b/test/e2e/config/pubsub_test/pubsub-test.yaml
@@ -20,6 +20,7 @@ metadata:
 spec:
   topic: {{.topic}}
   sink:
-    apiVersion: v1
-    kind: Service
-    name: event-display
+    ref:
+      apiVersion: v1
+      kind: Service
+      name: event-display
