updating more docs to new destination

--- a/docs/scheduler/scheduler.yaml
+++ b/docs/scheduler/scheduler.yaml
@@ -7,9 +7,10 @@ spec:
   data: "my test data"
   schedule: "* * * * *"
   sink:
-    apiVersion: v1
-    kind: Service
-    name: event-display
+    ref:
+      apiVersion: v1
+      kind: Service
+      name: event-display
 
   # If running in GKE, we will ask the metadata server, change this if required.
   #project: MY_PROJECT
