updates after code review

--- a/config/500-webhook.yaml
+++ b/config/500-webhook.yaml
@@ -39,6 +39,15 @@ spec:
           # This is the Go import path for the binary that is containerized
           # and substituted here.
           image: github.com/google/knative-gcp/cmd/webhook
+          resources:
+            requests:
+              # taken from serving.
+              cpu: 20m
+              memory: 20Mi
+            limits:
+              # taken from serving.
+              cpu: 200m
+              memory: 200Mi
           env:
             - name: SYSTEM_NAMESPACE
               valueFrom:
